stop splash image jumping

--- a/packages/frontend/src/components-pages/IntroPage/IntroPage.scss
+++ b/packages/frontend/src/components-pages/IntroPage/IntroPage.scss
@@ -13,7 +13,15 @@
     padding-bottom: 2.5rem;
   }
 
+  .c-intro-page__splash-wrapper {
+    padding-bottom: 48.828125%;
+    position: relative;
+  }
+
   .c-intro-page__splash-image {
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
   }
 
